--- a/templates/folio2.html
+++ b/templates/folio2.html
@@ -8,97 +8,72 @@
     <title>My Portfolio</title>
 
     <!-- Bootstrap -->
-<!--    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="static/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Portfolio Overview</h1>
+    <div class="container-fluid">
+        <div class="row">
+	    <div class="col-lg-10"><h1>Portfolio Overview</h1></div>
+	    <div class="col-lg-2">{{ foliouser }}</div>
+	</div>
 	<h3>
-	    <a href='/trade'>Enter transaction</a>
-	    <a href='/newstock'>Track new stock</a>
-	    <a href='/transactions?page=0&pagesize=10'>View transactions</a>
-	    <a href='/logout'>Logout</a>
+	    <a href='/trade' class='btn'>Enter transaction</a>
+	    <a href='/newstock' class='btn'>Track new stock</a>
+	    <a href='/transactions?page=0&pagesize=10' class='btn'>View transactions</a>
+	    <a href='/logout' class='btn'>Logout</a>
 	</h3>
 	
-        <div id="nameInput" class="input-group-lg center-block helloInput">
-            <p class="lead">{{ portfolioname }}</p>
+        <div id="nameInput" class="input-group-lg center-block helloInput col-lg-12">
+            <p class="lead">Portfolio: {{ portfolioname }}</p>
 	    <p class="infoheader">Total Portfolio Value: $ {{ portfoliovalue }}</p>
+	    <p class="statusnotice">{{ foliostatus }}</p>
 	    
 	{% for subcategory in portfoliodata.values() %}
-	    <div id="nameInput" class="input-group-lg center-block helloInput"><p>
-	    <table class="categoryheader">
-		<tr>
-		    <td class="categoryheader"><h3>{{ subcategory.type }}</h3></td>
-		    <td class="categoryheader"><h4>Target: {{ subcategory.target_percentage }} %</h4></td>
-		    <td class="categoryheader"><h4>Actual: {{ subcategory.actual_percentage }} %</h4></td>
-		    <td class="categoryheader"></td>
-		    <td class="categoryheader"></td>
-		    <td class="categoryheader"></td>
-		    <td class="categoryheader"></td>
-		</tr>
-	    </table>
-	    <table class="category">
-		<tr>
-		    <td class="stockheader">Symbol</td>
-		    <td class="stockheader">Name</td>
-		    <td class="stockheader">Price</td>
-		    <td class="stockheader">Buy Below</td>
-		    <td class="stockheader">Qty Owned</td>
-		    <td class="stockheader">Value</td>
-		    <td class="stockheader">Comments</td>
-		</tr>
-		
-	    {% for stock in subcategory['holdings'] %}
-		<tr class="stockrow">
-		    <td class="stockline">{{ stock.symbol }}</td>
-		    <td class="stockline">{{ stock.name }}</td>
-		    <td class="stocklinedollar">{{ stock.price }}</td>
-		    <td class="stocklinedollar"><a href='/updatestock?symbol={{ stock.symbol }}'>{{ stock.buy_below }}</a></td>
-		    <td class="stocklinedollar">{{ stock.qty }}</td>
-		    <td class="stocklinedollar">{{ stock.value }}</td>
-		    <td class="stockline">{{ stock.comments }}</td>
-		</tr>
-	    {% endfor %}
-	    </table></p></div>
-	{% endfor %}
-	    
-	    
-	    
-<!--	    <table>
-	      <tr>
-                        <td><h4></h4></td>
-			<td><h4>Target</h4></td>
-                        <td><h4>Buy Below</h4></td>
-			<td><h4>Price</h4></td>
-			<td><h4>Qty Owned</h4></td>
-			<td><h4>Value</h4></td>
-			<td><h4>Comments</h4></td>
-	      </tr>
-		{% for s, t, v, x, y, z, comments in portfoliotable %}
-                <tr>
-                        <td>{{ s }}</td>
-			<td>{{ t }}</td>
-                        <td>{{ v }}</td>
-			<td>{{ x }}</td>
-			<td>{{ y }}</td>
-                        <td>{{ z }}</td>
-			<td>{{ comments }}</td>
-                </tr>
+	    <div id="nameInput" class="input-group-lg center-block helloInput col-lg-12"><p>
+		<div class="headers col-lg-12">
+		    <div class="row">
+			<div class="categoryheader col-lg-4"><h3>{{ subcategory.type }}</h3></div>
+			<div class="categoryheader col-lg-4"><h4>Target: {{ subcategory.target_percentage }} %</h4></div>
+			<div class="categoryheader col-lg-4"><h4>Actual: {{ subcategory.actual_percentage }} %</h4></div>
+		    </div>
+		</div>
+		<div class="category">
+		    <div class="row">
+			<div class="stockheader col-lg-1">Symbol</div>
+			<div class="stockheader col-lg-2">Name</div>
+			<div class="stockheader col-lg-1">Price</div>
+			<div class="stockheader col-lg-1">Buy Below</div>
+			<div class="stockheader col-lg-1">Qty Owned</div>
+			<div class="stockheader col-lg-1">Value</div>
+			<div class="stockheader col-lg-5">Comments</div>
+		    </div>
+		    
+		{% for stock in subcategory['holdings'] %}
+		    <div class="row stockrow">
+			<div class="stockline col-lg-1">{{ stock.symbol }}</div>
+			<div class="stockline col-lg-2">{{ stock.name }}</div>
+			<div class="stocklinedollar col-lg-1">{{ stock.price }}</div>
+			<div class="stocklinedollar col-lg-1"><a href='/updatestock?symbol={{ stock.symbol }}'>{{ stock.buy_below }}</a></div>
+			<div class="stocklinedollar col-lg-1">{{ stock.qty }}</div>
+			<div class="stocklinedollar col-lg-1">{{ stock.value }}</div>
+			<div class="stockline col-lg-5">{{ stock.comments }}</div>
+		    </div>
 		{% endfor %}
-	    </table>-->
-	    
+		</div></p>
+		<hr>
+	    </div>
+	{% endfor %}
         </div>
         <p id="response" class="lead text-center"></p>
 
         <p id="databaseNames" class="lead text-center"></p>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="static/antixss.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
