--- a/templates/trade.html
+++ b/templates/trade.html
@@ -1,54 +1,69 @@
-<link rel="stylesheet" href="/static/style.css" type="text/css">
+<head>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/style.css" type="text/css">
+</head>
+        
 {% block body %}
- 
-<form action="/trade" method="POST">
-	<div class="stock">
-		<div class="stock-screen">
-			<div class="app-title">
-				<h1>Trade Security in Portfolio</h1>
-				<h3>{{ message }}</h3>
-			</div>
- 
-			<div class="trade-form">
-				<div class="control-group">
-				Symbol:<input type="text" class="trade-field" value="" placeholder="security" name="symbol">
-<!--				<label class="login-field-icon fui-user" for="login-name"></label>-->
-				</div>
 
-				<div class="control-group">
-				Quantity:<input type="float" class="trade-field" value=0.0 placeholder="quantity" name="quantity">
-				</div>
-				
-				<div class="control-group">
-				Price:<input type="float" class="trade-field" value=0.0 placeholder="price" name="price">
-				</div>
-				
-				<div class="control-group">
-				Fee:<input type="float" class="trade-field" value=0.0 placeholder="fee amount" name="fee">
-				</div>				
-				
-				
-                                Action:<div>
-                                    <select name="action">
-                                    {% for category in ['buy','sell','deposit','withdrawl'] %}
-                                    <option value="{{ category }}">{{category}}</option>
-                                    {% endfor %}
-                                    </select>
-                                </div>
-				<div>Trade against account cash balance?</div>
-				<div>
-                                <input type="radio" name="usebalance" value=1 checked> Yes<br>
-                                <input type="radio" name="usebalance" value=0> No
-                                </div>
- 
-                <input type="submit" value="Trade" class="btn btn-primary btn-large btn-block" >
-			    <br>
-			</div>
-		</div>
-	</div>
-</form>
-<form action="/">
-    <input type="submit" value="Cancel" class="btn">
-</form>
+<div class="container-fluid"> 
+    <form action="/trade" method="POST">
+        <div class="row">
+            <div class="col-md-8">
+                <h1>Trade Security in Portfolio</h1>
+            </div>
+        </div>
+        <div class="row">
+            <h3>{{ message }}</h3>
+        </div>
+        <div class="row">
+            <div class="col-md-3"><label for="sym">Symbol</label></div>
+            <div class="col-md-3"><label for="qty">Quantity</label></div>
+            <div class="col-md-3"><label for="stockprice">Price</label></div>
+            <div class="col-md-3"><label for="feeamount">Fee</label></div>
+        </div>
+        <div class="row">
+            <div class="col-md-3"><input type="text" id="sym" value="" placeholder="security" name="symbol"></div>
+            <div class="col-md-3"><input type="float" id="qty"  value=0.0 placeholder="quantity" name="quantity"></div>
+            <div class="col-md-3"><input type="float" id="stockprice" value=0.0 placeholder="price" name="price"></div>
+            <div class="col-md-3"><input type="float" id="feeamount" value=0.0 placeholder="fee amount" name="fee"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-1">
+                <label for="tradeoperation" class="formlabel">Action</label>
+            </div>
+            <div class="col-md-2">
+                <select id="tradeoperation" name="action">
+                    {% for category in ['buy','sell','deposit','withdrawl'] %}
+                    <option value="{{ category }}">{{category}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="col-md-3">
+               <label class="formlabel">Trade against cash balance?</label>
+            </div>
+            <div class="col-md-2">
+                <label class="formlabel">Yes</label>
+                <input type="radio" name="usebalance" value=1 checked="checked">
+            </div>
+            <div class="col-md-2">
+                <label class="formlabel">No</label>
+                <input type="radio" name="usebalance" value=0 class="formlabel">
+            </div>
+            <div class="col-md-2"></div>
+
+        </div>
+        <div class="row">
+            <div class="col-md-1"><input type="submit" value="Trade"></div>
+            <div class="col-md-1"><a href='/' class="btn">Cancel</a></div>
+            <div class="col-md-10"></div>
+        </div>
+    </form>
+</div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 {% endblock %}
