--- a/templates/transactions_old.html
+++ b/templates/transactions_old.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="static/style.css" rel="stylesheet">
 </head>
 
@@ -13,10 +13,11 @@
     <div class="container-fluid">
         <h1>Recent Transactions</h1>
 	<h3>
-            <a href='/' class="btn">Home</a>
-	    <a href='/trade' class="btn">Enter transaction</a>
-	    <a href='/newstock' class="btn">Track new stock</a>
-	    <a href='/logout' class="btn">Logout</a>
+            <a href='/'>Home</a>
+	    <a href='/trade'>Enter transaction</a>
+	    <a href='/newstock'>Track new stock</a>
+	    <a href='/transactions?page=0&pagesize=10'>View transactions</a>
+	    <a href='/logout'>Logout</a>
 	</h3>
 	
         <div id="transactions" class="input-group-lg center-block helloInput col-lg-12">
